--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>DevFolio Bootstrap</title>
     <meta charset="UTF-8">
     <meta name = "description" content="Professional Designer , Professional photographer , Professional Freelancer">
     <meta name = "kaywords" content="Professional Designer , Professional photographer , Professional Freelancer">
     <link rel="stylesheet" href="css/all.min.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta anme="author" content="AHMED RASHED" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <header class="vh-100 ">
